--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/serve-static": "^4.0.2",
     "@types/debug": "^4.1.12",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "debug": "^4.3.5",
     "dotenv": "^16.4.5",
     "mongoose": "^8.4.4",
@@ -55,7 +57,8 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "tslint-class-validator-rule": "^1.0.5"
   },
   "jest": {
     "moduleFileExtensions": [
