--- a/backend/package.json
+++ b/backend/package.json
@@ -57,8 +57,7 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3",
-    "tslint-class-validator-rule": "^1.0.5"
+    "typescript": "^5.1.3"
   },
   "jest": {
     "moduleFileExtensions": [
