--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "class-validator": "^0.14.1",
     "debug": "^4.3.5",
     "dotenv": "^16.4.5",
+    "mongodb": "^5.9.2",
     "mongoose": "^8.4.4",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.0",
