fix: repository reorganization

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,11 @@
+# Чтобы переключиться на другую базу данных, нужно раскомментировать код переменных среды нужной БД
+# DATABASE_DRIVER="mongodb"
+# DATABASE_URL="localhost"
+# DATABASE_PORT=27017
+# DATABASE_USERNAME=""
+# DATABASE_PASSWORD=""
+# DATABASE_NAME="afisha"
+# DEBUG=*
 DATABASE_DRIVER="postgres"
 DATABASE_URL="localhost"
 DATABASE_PORT=5432
