--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
       args:
-        VITE_API_URL: "//api.free2code.nomorepartiesco.ru/api"
+        VITE_API_URL: "//free2code.nomorepartiesco.ru/api"
     container_name: frontend
     networks:
       - webnet
