--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,20 +20,35 @@ services:
     networks:
       - webnet
     environment:
-      - DATABASE_DRIVER=mongodb
-      - DATABASE_URL=mongo
-      - DATABASE_PORT=27017
-      - DATABASE_NAME=afisha
+      - DATABASE_DRIVER=postgres
+      - DATABASE_URL=postgres
+      - DATABASE_PORT=5432
+      - DATABASE_NAME=prac
+      - DATABASE_USERNAME=prac
+      - DATABASE_PASSWORD=prac
     depends_on:
-      - mongo
+      - postgres
 
-  mongo:
-    image: mongo:latest
-    container_name: mongo
+  postgres:
+    image: postgres:latest
+    container_name: postgres
     volumes:
-      - mongo_data:/data/db
+      - postgres_data:/usr/local/pgsql/data
     networks:
       - webnet
+    environment:
+      POSTGRES_PASSWORD: postgres
+
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: pgadmin
+    networks:
+      - webnet
+    ports:
+      - 8080:80
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=veseliy.koteika@yandex.ru
+      - PGADMIN_DEFAULT_PASSWORD=postgres
 
   nginx:
     image: nginx:latest
@@ -45,10 +60,21 @@ services:
     restart: always
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - frontend_dist:/var/www/frontend:ro
+      - ./certbot/www/:/var/www/certbot/:ro
+      - ./certbot/conf/:/etc/letsencrypt/:ro
+      - frontend_dist:/var/www/frontend:rw
+      - ./backend/public/content:/var/www/frontend/content:rw
+
+  certbot:
+    image: certbot/certbot:latest
+    networks:
+      - webnet
+    volumes:
+      - ./certbot/www/:/var/www/certbot/:rw
+      - ./certbot/conf/:/etc/letsencrypt/:rw
 
 volumes:
-  mongo_data:
+  postgres_data:
   frontend_dist:
 
 networks:
