--- a/nginx.conf
+++ b/nginx.conf
@@ -4,13 +4,20 @@ events {
 
 http {
     server {
-        listen 80;
-        listen [::]:80;
+        listen 443 default_server ssl;
+        listen [::]:443 ssl;
+
+	ssl_certificate /etc/letsencrypt/live/free2code.nomorepartiesco.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/free2code.nomorepartiesco.ru/privkey.pem;
 
         server_name free2code.nomorepartiesco.ru;
 
-        location / {
-                        root /var/www/frontend;
+        location /.well-known/acme-challenge/ {
+		root /var/www/certbot;
+	}
+	
+	location / {
+		root /var/www/frontend;
             index index.html;
         }
 
@@ -44,6 +51,17 @@ http {
             audio/x-m4a m4a;
             video/mp4 mp4;
             video/quicktime mov;
+        }
+    }
+
+    server {
+        listen 80;
+        listen [::]:80;
+
+        server_name free2code.nomorepartiesco.ru;
+
+        location / {
+            return 301 https://$server_name$request_uri;
         }
     }
 } 
