--- a/.github/workflows/public-docker-images.yml
+++ b/.github/workflows/public-docker-images.yml
@@ -24,7 +24,7 @@ jobs:
               uses: docker/login-action@v2
               with:
                 registry: ghcr.io
-                username: ${{ secrets.GHCR_USERNAME }}
+                username: ${{ github.actor }}
                 password: ${{ secrets.GHCR_TOKEN }}
             
             - name: Cache Docker layers
