--- a/.github/workflows/public-docker-images.yml
+++ b/.github/workflows/public-docker-images.yml
@@ -21,11 +21,11 @@ jobs:
               uses: docker/setup-buildx-action@v3
 
             - name: Log in to Docker Hub
-              uses: docker/login-action@v2
+              uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
               with:
-                registry: ghcr.io
+                registry: ${{ env.REGISTRY }}
                 username: ${{ github.actor }}
-                password: ${{ secrets.GHCR_TOKEN }}
+                password: ${{ secrets.DOCKER_TOKEN }}
             
             - name: Cache Docker layers
               uses: actions/cache@v3
