--- a/.github/workflows/public-docker-images.yml
+++ b/.github/workflows/public-docker-images.yml
@@ -21,7 +21,7 @@ jobs:
               uses: docker/setup-buildx-action@v3
 
             - name: Log in to Docker Hub
-              uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
+              uses: docker/login-action@v2
               with:
                 username: ${{ github.actor }}
                 password: ${{ secrets.DOCKER_TOKEN }}
