--- a/.github/workflows/public-docker-images.yml
+++ b/.github/workflows/public-docker-images.yml
@@ -20,7 +20,7 @@ jobs:
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3
 
-            - name: Log in to Docker Hub
+            - name: Log in to Docker Hub:${{ secrets.DOCKER_TOKEN }}
               uses: docker/login-action@v2
               with:
                 username: ${{ github.actor }}
