--- a/.github/workflows/public-docker-images.yml
+++ b/.github/workflows/public-docker-images.yml
@@ -20,11 +20,11 @@ jobs:
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3
 
-            - name: Log in to Docker Hub:${{ secrets.DOCKER_TOKEN }}
-              uses: docker/login-action@v2
+            - name: Log in to Docker Hub
+              uses: docker/login-action@v3.3.0
               with:
                 username: ${{ github.actor }}
-                password: ${{ secrets.DOCKER_TOKEN }}
+                password: ${{ secrets.GHCR_TOKEN }}
             
             - name: Cache Docker layers
               uses: actions/cache@v3
