--- a/.github/workflows/public-docker-images.yml
+++ b/.github/workflows/public-docker-images.yml
@@ -23,6 +23,7 @@ jobs:
             - name: Log in to Docker Hub
               uses: docker/login-action@v3.3.0
               with:
+                registry: ghcr.io
                 username: ${{ github.actor }}
                 password: ${{ secrets.GHCR_TOKEN }}
             
