--- a/.github/workflows/public-docker-images.yml
+++ b/.github/workflows/public-docker-images.yml
@@ -17,22 +17,17 @@ jobs:
             - name: Check out the repo
               uses: actions/checkout@v4
 
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v3
-
             - name: Log in to Docker Hub
               uses: docker/login-action@v3
               with:
                 username: ${{ github.actor }}
                 password: ${{ secrets.GHCR_TOKEN }}
-            
-            - name: Cache Docker layers
-              uses: actions/cache@v3
-              with:
-                path: /tmp/.buildx-cache
-                key: ${{ runner.os }}-buildx-${{ github.sha }}
-                restore-keys: |
-                   ${{ runner.os }}-buildx-
+
+            - name: Set up QEMU
+              uses: docker/setup-qemu-action@v3
+              
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
             
             - name: Build and push Backend Docker image
               uses: docker/build-push-action@v6.10.0
