fix: .env-example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,4 @@
+# Для включения нужного логгера нужно поменять значение LOGGER (dev, json, tskv)
 # Чтобы переключиться на другую базу данных, нужно раскомментировать код переменных среды нужной БД
 # DATABASE_DRIVER="mongodb"
 # DATABASE_URL="localhost"
@@ -13,3 +14,4 @@ DATABASE_USERNAME="prac"
 DATABASE_PASSWORD="prac"
 DATABASE_NAME="prac"
 DEBUG=*
+LOGGER="tskv"
