--- a/.github/workflows/public-docker-images.yml
+++ b/.github/workflows/public-docker-images.yml
@@ -20,27 +20,33 @@ jobs:
             - name: Log in to Docker Hub
               uses: docker/login-action@v3
               with:
+                registry: ghcr.io
                 username: ${{ github.actor }}
                 password: ${{ secrets.GHCR_TOKEN }}
-
-            - name: Set up QEMU
-              uses: docker/setup-qemu-action@v3
               
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3
+
+            - name: Cache Docker layers
+              uses: actions/cache@v3
+              with:
+                path: /tmp/.buildx-cache
+                key: ${{ runner.os }}-buildx-${{ github.sha }}
+                restore-keys: |
+                  ${{ runner.os }}-buildx-
             
             - name: Build and push Backend Docker image
-              uses: docker/build-push-action@v6.10.0
+              uses: docker/build-push-action@v3
               with:
                 context: ./backend
                 file: ./backend/Dockerfile
                 push: true
-                tags: ${{ github.repository }}-backend:latest
+                tags: ghcr.io/${{ github.repository }}/backend:latest
               
-            - name: Build and push Frontend Docker image
-              uses: docker/build-push-action@v6.10.0
+            - name: Build and push Front Docker image
+              uses: docker/build-push-action@v3
               with:
                 context: ./frontend
                 file: ./frontend/Dockerfile
                 push: true
-                tags: ${{ github.repository }}-frontend:latest
+                tags: ghcr.io/${{ github.repository }}/frontend:latest
