--- a/.github/workflows/public-docker-images.yml
+++ b/.github/workflows/public-docker-images.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
     push_to_registry:
-        name: Push Docker image to Docker Hub
+        name: Push Docker image to GHCR
         runs-on: ubuntu-latest
         steps:
             - name: Check out the repo
