--- a/.github/workflows/public-docker-images.yml
+++ b/.github/workflows/public-docker-images.yml
@@ -50,3 +50,13 @@ jobs:
                 file: ./frontend/Dockerfile
                 push: true
                 tags: ghcr.io/${{ github.repository }}/frontend:latest
+
+            - name: Rebuild docker containers
+              uses: appleboy/ssh-action@v0.1.0
+              with:
+                host: ${{ secrets.SSH_HOST }}
+                username: ${{ secrets.SSH_USER }}
+                key: ${{ secrets.SSH_PRIVATE_KEY }}
+                script: |
+                  cd film-react-nest
+                  sudo docker compose down
