--- a/.github/workflows/public-docker-images.yml
+++ b/.github/workflows/public-docker-images.yml
@@ -60,3 +60,8 @@ jobs:
                 script: |
                   cd film-react-nest
                   sudo docker compose down
+                  yes | sudo docker system prune -a
+                  sudo docker volume rm film-react-nest_frontend_dist
+                  git pull origin review-3
+                  sudo docker compose up -d --build
+                  sudo docker ps
