--- a/.github/workflows/public-docker-images.yml
+++ b/.github/workflows/public-docker-images.yml
@@ -59,8 +59,12 @@ jobs:
                 key: ${{ secrets.SSH_PRIVATE_KEY }}
                 script: |
                   cd film-react-nest
-                  sudo docker compose down
+                  sudo docker compose down frontend
+                  sudo docker compose down backend
+                  sudo docker compose down nginx
                   sudo docker volume rm film-react-nest_frontend_dist
                   git pull origin review-3
-                  sudo docker compose up -d --build
+                  sudo docker compose up -d frontend
+                  sudo docker compose up -d backend
+                  sudo docker compose up -d nginx
                   sudo docker ps
