fix: nginx config

--- a/nginx.conf
+++ b/nginx.conf
@@ -29,7 +29,7 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /api/ {
+        location /pgadmin/ {
             proxy_pass http://pgadmin:80;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
