--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     container_name: backend
     networks:
       - webnet
+    restart: unless-stopped
     environment:
       - DATABASE_DRIVER=postgres
       - DATABASE_URL=postgres
@@ -31,6 +32,7 @@ services:
       - postgres_data:/usr/local/pgsql/data
     networks:
       - webnet
+    restart: unless-stopped
     environment:
       POSTGRES_PASSWORD: postgres
 
@@ -41,6 +43,7 @@ services:
       -8080:80
     networks:
       - webnet
+    restart: unless-stopped
     environment:
       - PGADMIN_DEFAULT_EMAIL=veseliy.koteika@yandex.ru
       - PGADMIN_DEFAULT_PASSWORD=postgres
@@ -52,7 +55,7 @@ services:
       - 443:443
     networks:
       - webnet
-    restart: always
+    restart: unless-stopped
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./certbot/www/:/var/www/certbot/:ro
@@ -64,6 +67,7 @@ services:
     image: certbot/certbot:latest
     networks:
       - webnet
+    restart: unless-stopped
     volumes:
       - ./certbot/www/:/var/www/certbot/:rw
       - ./certbot/conf/:/etc/letsencrypt/:rw
